2009-09-19  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocs2html.cs: By request of Edd Dumbill, add
	  --with-version=VERSION option.  This will generate HTML
	  documentation for ONLY those types/members which exist within
	  VERSION.  This makes it easy to generate HTML that will show e.g.
	  only MonoTouch docs (and not the full class library docs).
	* Makefile: Add test for 'mdoc export-html --with-version=VERSION'.
	  Somewhat brain-dead, as it only checks for added types (and not
	  added members), but better than nothing...

2009-09-09  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocs2html.cs: Fix behavior when multiple
	  source directories are provided, e.g. 'mdoc export-html -o o a b c'
	  with docs located in directories a, b, and c.  Previously this would
	  be equivalent to running aginst a, b, and c separately, resulting in
	  o/index.html being continually overwritten (and thus not showing ALL
	  available types).
	* Resources/stylesheet.xsl: Make $Index a parameter (as monodocs2html
	  will create an in-memory index containing all types from all
	  specified directories), and various changes to cope with $Index no
	  longer being a file.  Better support files in the global namespace.
	* Test/html.expected/NoNamespace.html: Fix assembly link.

2009-08-12  Jonathan Pryor <jpryor@novell.com>

	* Test/DocTest-v1.cs: Add a comment which uses <format/>, to test html
	  escaping behavior.
	* Resources/monodoc-ecma.xsd: Permit <format/> in various elements.
	* Test/en.expected.importslashdoc/Mono.DocTest/DocAttribute.xml,
	  Test/html.expected/Mono.DocTest/DocAttribute.html,
	  Test/msxdoc-expected.importslashdoc.xml: Flush.

2009-08-12  Jonathan Pryor <jpryor@novell.com>

	* Makefile: Add ../monodoc/Resources/mdoc-html-format.xsl as a resource.

2009-08-06  Jonathan Pryor <jpryor@novell.com>

	* mdoc.exe.sources: Add ../../build/common/Consts.cs to the build.